# alex3

./: CMakeLists.txt  INSTALL.txt  RUNNING.txt
alexMain/: CMakeLists.txt  alexDST.cpp  alexMain.cpp
asvc/: ABTrack.cpp  ABTrack.h  ABlob.cpp  ADebug.cpp  ADebug.h  ADefs.h  AEvent.cpp  AEvent.h  AHit.cpp  AHit.h  AID.cpp  AID.h  AParticle.cpp  AParticle.h  AProperties.cpp  AProperties.h  ARTrack.cpp  ARTrack.h  ASvc.cpp  ASvc.h  ATTRack.h  ATTrack.cpp  ATTrack.h  AlexRootWriter.cpp  AlexRootWriter.h  LinkDef.h
base/: Alex.cpp  Alex.h  GDefs.h  IAlgorithm.h  IData.h  TDefs.h
cmake/Modules/: FindIrene.cmake  FindPaolina.cmake  FindROOT.cmake  FindROOT2.cmake.webarchive
config/: AConfigSvc.cpp  AConfigSvc.h  AlexConfigure.cpp  AlexConfigure.h  DArray.cpp  DArray.h  DHisto.cpp  DHistos.h  DParam.cpp  DParam.h  xConfigure.cxx
doc/: DevelopmentNotes.key
galex/: CMakeLists.txt  EveHits.cpp  EveHits.h  GalexMF.h  LinkDef.h  MultiView.cpp  MultiView.h  RootEve.h  RootGlobals.h  RootGui.h  RootUtil.h  gConfigure.cxx  galex.cpp  galex.xml  galexJM.xml
isvc/: IDefs.h  ISvc.cpp  ISvc.h
jjalgos/: AlexConfig.xml  AlgoConfig.xml  AlgoHeaders.hh  DrawHits.cpp  DrawHits.xml  IreneLoader.cpp  IreneLoader.xml  PDrawHits.h  PIreneLoader.h  PWriteAlexDST.h  TestAlex.cpp  WriteAlexDST.cpp  WriteAlexDST.hh  WriteAlexDST.xml  WriteDST.xml
jjbox/: CMakeLists.txt  PWriteDST.h  TRTrack.h  TTTrack.cpp  TestAlex.cpp  WriteDST.cpp
jmalgos/: AlexConfig.xml  AlgoConfig.xml  CMakeLists.txt  DrawHits.cpp  DrawHits.xml  EnergySmearer.cpp  EnergySmearer.xml  ExtremesCharacterizer.cpp  ExtremesCharacterizer.xml  GoodRoadFilter.cpp  GoodRoadFilter.xml  IreneLoader.cpp  IreneLoader.xml  Next100FiducialFilter.cpp  Next100FiducialFilter.xml  PDrawHits.h  PEnergySmearer.h  PExtremesCharacterizer.h  PGoodRoadFilter.h  PIreneLoader.h  PNext100FiducialFilter.h  PRoadCharacterizer.h  PRoadFilter.h  PRoadStudy.h  PRoadWidthFilter.h  PRoadWidthStudy.h  PSmearedEnergyFilter.h  PTestAlex.h  PTrueEnergyFilter.h  PVoxelizer.h  RoadCharacterizer.cpp  RoadCharacterizer.xml  RoadFilter.cpp  RoadFilter.xml  RoadStudy.cpp  RoadStudy.xml  RoadWidthFilter.cpp  RoadWidthFilter.xml  RoadWidthStudy.cpp  RoadWidthStudy.xml  (+8 more)
psvc/: PDefs.h  PSvc.cpp  PSvc.h
rsvc/: LinkDef.h  TEvent.cpp  TEvent.h  THit.cpp  THit.h  TParticle.cpp  TParticle.h  TTTrack.h
tsvc/: TEvent.cpp  TEvent.h  THit.cpp  THit.h  TParticle.cpp  TParticle.h  TRTrack.cpp  TRTrack.h  TSvcLinkDef.h  TTTrack.cpp  TTTrack.h
util/: LogUtil.cpp  LogUtil.h  SingletonTemplate.h  StringOperations.cpp  StringOperations.h  VectorOperations.h
